All issues are solved! The recompiling function is basically done.

17-04-2023: Added object management, mainly for referencing now.

18-04-2023: Added material compile flag. It will differensiate full compile and bind only now. Finish full compile and bind only refresh. Despite it's a bit smelly.

19-04-2023: Checked texture reference before refreshing material. Now they should always be uploaded to GPU before used. Finished node disconnection function, also arranged the enum used in WndProc, prevented use the same value as system ID.
Started to add implementation for saving materials. Saving material works partially, now it needs to save the default value of the node as well.

20-04-2023: Moved graph node classes to runtime. Added implemenation for node data I/O, mainly for default value.
Data works fine in editor build, now I have to figure out a way to deal with relase build data. Added simple fallback shader for material.
Next is to optimize the default graph node, don't give opacity if it's not alpha test object, and don't duplicate texture nodes.
Sovled the texture node duplication. I wonder if parameter node can be solved too...Yes I solved it!
Added shader cache for template as well.


21-04-2023: Minor optimization for alpha test and TAA jitter offsets.

24~26-04-2023: Minor bugfixes and code arrangement. Fix material editor issue.

27-04-2023: Smoothed the edge of TAA. Applied material shader rules to depth pass. ShaderClass code arrangement.
Added the macro hash to material shader as well. Enhanced the shader/materisl cache workflow.

28-04-2023: Improved material cache workflow. Improved compiling workflow. Fixed the flickering issue of RTOT when vsync is off.

01-06-2023: Fixed a RT bug caused by NVIDIA driver. The miss shader is a must-have now in binding. Let Release_Editor build asserts too.