@@ -8,3 +8,7 @@ extern uint32_t GFrameNumber;
 #if WITH_DEBUG
 extern bool GEnableGPUTiming;
 #endif
+
+extern uint32_t GMainThreadAffinity;
+extern uint32_t GRenderThreadAffinity;
+extern uint32_t GWorkerThreadAffinity;
